Fix spacing on mobile

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -50,7 +50,7 @@
 
   &__header {
     text-align: center;
-    margin-bottom: 5rem;
+    margin-bottom: 10rem;
   }
 
   &__header-text {
